# th06

./: .gitignore  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  README.md
android/: build.gradle  gradle.properties  startRelease.bat
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/th06/game/: JoystickView.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLActivity.java.bak  SDLControllerManager.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  styles.xml
pc98/: CMakeLists.txt  initCMake.bat  removeCache.bat
scripts/: configure.py  create_devenv.py  gen_encoding_tables.py  gen_i18n.py  pragma_var_order.cpp
sdl1.2/: CMakeLists.txt
sdl2/: CMakeLists.txt
sdl3/: CMakeLists.txt
src/: AnmIdx.hpp  AnmManager.cpp  AnmManager.cpp.bak.txt  AnmManager.hpp  AnmManager.hpp.bak.txt  AnmVm.hpp  AsciiManager.cpp  BombData.cpp  BombData.hpp  BulletData.cpp  BulletData.hpp  BulletManager.cpp  BulletManager.hpp  CMyFont.cpp  Chain.cpp  Chain.hpp  Connection.cpp  Connection.hpp  ConnectionUI.cpp  ConnectionUI.hpp  Controller.cpp  Controller.cpp.bak  Controller.cpp.bak.txt  Controller.hpp  Controller.hpp.bak  EclManager.cpp  EclManager.hpp  EffectManager.cpp  Ending.cpp  Enemy.hpp  EnemyEclInstr.cpp  EnemyEclInstr.hpp  EnemyManager.cpp  EnemyManager.hpp  FileSystem.cpp  FileSystem.hpp  GLFunc.cpp  GLFunc.hpp  GameErrorContext.cpp  GameErrorContext.hpp  (+55 more)
src/autogenerated/: Embeds.hpp
src/controller/: Controller.cpp
src/graphics/: FixedFunctionDX2.cpp  FixedFunctionDX2.hpp  FixedFunctionGL.cpp  FixedFunctionGL.cpp.bak  FixedFunctionGL.hpp  FixedFunctionGLWIN32.cpp  FixedFunctionGLWIN32.hpp  GLFunc.cpp  GLFunc.hpp  GLFunc.hpp.bak  GfxInterface.hpp  Software.cpp  Software.hpp  VulkanBackend.cpp  VulkanBackend.hpp  WebGL.cpp  WebGL.hpp
src/midi/: MidiDefault.cpp  MidiWin32.hpp
src/pbg3/: FileAbstraction.cpp  FileAbstraction.hpp  IPbg3Parser.cpp  IPbg3Parser.hpp  Pbg3Archive.cpp  Pbg3Archive.hpp  Pbg3Parser.cpp  Pbg3Parser.hpp
src_new/: AnmManager.cpp  AnmManager.hpp  AnmVm.hpp  AsciiManager.cpp  AsciiManager.hpp  BombData.cpp  BombData.hpp  BulletManager.cpp  BulletManager.hpp  CMyFont.hpp  Controller.cpp.bak  Controller.hpp  EclManager.cpp  EffectManager.cpp  EffectManager.hpp  Ending.cpp  Ending.hpp  Enemy.hpp  EnemyEclInstr.cpp  EnemyEclInstr.hpp  EnemyManager.hpp  FileSystem.cpp  FileSystem.hpp  GLFunc.hpp  GameErrorContext.cpp  GameErrorContext.hpp  GameManager.cpp  GameManager.hpp  GameWindow.cpp  GameWindow.hpp  Gui.cpp  Gui.hpp  IRenderer.hpp  ItemManager.cpp  ItemManager.hpp  MainMenu.hpp  MidiOutput.hpp  MusicRoom.cpp  Player.cpp  Player.hpp  (+28 more)
src_new/graphics/: FixedFunctionGL.hpp  GfxInterface.hpp  WebGL.cpp  ff.frag
src_new/midi/: MidiAlsa.cpp  MidiAlsa.hpp  MidiDefault.hpp  MidiWin32.cpp
src_new/pbg3/: FileAbstraction.cpp  FileAbstraction.hpp  Pbg3Archive.cpp  Pbg3Parser.cpp
window98/: CMakeLists.txt  buildRelease.bat
