cmake_minimum_required(VERSION 3.20)
project(th06_sdl LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)

option(TH06_USE_SDL "TH06 SDL" ON)

if(TH06_USE_SDL)
  if(WIN32)
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(SDL_ARCH "x64")
    else()
        set(SDL_ARCH "x86")
    endif()

    set(SDL_DIR "${CMAKE_SOURCE_DIR}/../3rdparty/SDL")

    add_library(SDL::SDLmain STATIC IMPORTED)
    set_target_properties(SDL::SDLmain PROPERTIES
        IMPORTED_LOCATION "${SDL_DIR}/lib/${SDL_ARCH}modern/SDLmain.lib"
        INTERFACE_INCLUDE_DIRECTORIES "${SDL_DIR}/include"
    )

    add_library(SDL::SDL SHARED IMPORTED)
    set_target_properties(SDL::SDL PROPERTIES
        IMPORTED_LOCATION "${SDL_DIR}/lib/${SDL_ARCH}/SDL.dll"
        IMPORTED_IMPLIB   "${SDL_DIR}/lib/${SDL_ARCH}/SDL.lib"
        INTERFACE_INCLUDE_DIRECTORIES "${SDL_DIR}/include"
    )

    message(STATUS "SDL DIR: ${SDL_DIR}")
    message(STATUS "ARCH DIR: ${SDL_ARCH}")
  else()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(SDL REQUIRED IMPORTED_TARGET sdl)

    if(NOT TARGET SDL::SDL)
        add_library(SDL::SDL ALIAS PkgConfig::SDL)
    endif()

    add_library(SDL::SDLmain INTERFACE IMPORTED)
    message(STATUS "SDL VERSION: ${SDL_VERSION}")
  endif()
endif()

set(TH06_GAME_SOURCES
    ../src/main.cpp
    ../src/AnmManager.cpp
    ../src/AsciiManager.cpp
    ../src/BombData.cpp
    ../src/BulletData.cpp
    ../src/BulletManager.cpp
    ../src/Chain.cpp
    ../src/Controller.cpp
    ../src/EclManager.cpp
    ../src/EffectManager.cpp
    ../src/Ending.cpp
    ../src/EnemyEclInstr.cpp
    ../src/EnemyManager.cpp
    ../src/FileSystem.cpp
    ../src/GameErrorContext.cpp
    ../src/GameManager.cpp
    ../src/GamePaths.cpp
    ../src/GameWindow.cpp
    ../src/Gui.cpp
    ../src/ItemManager.cpp
    ../src/MainMenu.cpp
    ../src/MidiOutput.cpp
    ../src/MusicRoom.cpp
    ../src/Player.cpp
    ../src/ReplayManager.cpp
    ../src/ResultScreen.cpp
    ../src/Rng.cpp
    ../src/ScreenEffect.cpp
    ../src/SoundPlayer.cpp
    ../src/Stage.cpp
    ../src/Supervisor.cpp
    ../src/TextHelper.cpp
    ../src/utils.cpp
    ../src/ZunMath.cpp
    ../src/ZunTimer.cpp
    ../src/thirdparty/sjis_converter.cpp
    ../src/midi/MidiDefault.cpp
    ../src/graphics/GLFunc.cpp
    ../src/graphics/FixedFunctionGLWIN32.cpp
    ../src/graphics/FixedFunctionGL.cpp
    ../src/graphics/WebGL.cpp
    ../src/graphics/Software.cpp
    ../src/pbg3/FileAbstraction.cpp
    ../src/pbg3/IPbg3Parser.cpp
    ../src/pbg3/Pbg3Archive.cpp
    ../src/pbg3/Pbg3Parser.cpp
)

add_executable(th06 ${TH06_GAME_SOURCES})

if(MSVC)
    target_link_options(th06 PRIVATE /MAP)
endif()

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    target_compile_options(th06 PRIVATE
        -m32                     
        -fpermissive             
        -Wno-changes-meaning     
        -Wno-unknown-pragmas     
    )
    target_link_options(th06 PRIVATE -m32)
endif()

target_include_directories(th06 PRIVATE
    ${CMAKE_SOURCE_DIR}/../src
    ${CMAKE_SOURCE_DIR}/../build/autogenerated
)

# MSVC: i18n.hpp and thprac files contain UTF-8 CJK strings.
# Apply /utf-8 globally since i18n.hpp is included by many source files.
if(MSVC)
    target_compile_options(th06 PRIVATE /utf-8)
endif()

set(I18N_TPL "${CMAKE_SOURCE_DIR}/../src/i18n.tpl")
set(I18N_HPP "${CMAKE_SOURCE_DIR}/../src/i18n.hpp")

if(WIN32)
    set(TH06_PYTHON "python")
else()
    find_program(TH06_PYTHON NAMES python3 python REQUIRED)
endif()

set(TH_TEXT_ENCODING "utf-8")
message(STATUS "TH06 text encoding: ${TH_TEXT_ENCODING}")

add_custom_command(
    OUTPUT "${I18N_HPP}"
    COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_SOURCE_DIR}/../build/autogenerated"
    COMMAND ${TH06_PYTHON} "${CMAKE_SOURCE_DIR}/../scripts/gen_i18n.py"
        "${I18N_TPL}" "${I18N_HPP}" "${TH_TEXT_ENCODING}"
    DEPENDS "${I18N_TPL}" "${CMAKE_SOURCE_DIR}/../scripts/gen_i18n.py"
    COMMENT "generated i18n.hpp (UTF-8)"
)
add_custom_target(generate_i18n DEPENDS "${I18N_HPP}")
add_dependencies(th06 generate_i18n)

if(NOT WIN32 AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    find_library(OPENGL_gl_LIBRARY NAMES GL PATHS /usr/lib/i386-linux-gnu NO_DEFAULT_PATH)
    if(NOT OPENGL_gl_LIBRARY)
        find_package(OpenGL REQUIRED)
    endif()
else()
    find_package(OpenGL REQUIRED)
endif()

target_link_libraries(th06 PRIVATE
    SDL::SDLmain
    SDL::SDL
)
if(OPENGL_gl_LIBRARY)
    target_link_libraries(th06 PRIVATE ${OPENGL_gl_LIBRARY})
else()
    target_link_libraries(th06 PRIVATE OpenGL::GL)
endif()

if(WIN32)
    target_link_libraries(th06 PRIVATE winmm)
endif()

if(WIN32)
    add_custom_command(TARGET th06 POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${SDL_DIR}/lib/${SDL_ARCH}/SDL.dll"
            $<TARGET_FILE_DIR:th06>
        COMMENT "SDL DLL COPIED"
    )
endif()

set(FONT_SRC "${CMAKE_SOURCE_DIR}/../th06.ttf")
if(EXISTS "${FONT_SRC}")
    add_custom_command(TARGET th06 POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${FONT_SRC}"
            "$<TARGET_FILE_DIR:th06>/th06.ttf"
        COMMENT "Add Font"
    )
endif()
