cmake_minimum_required(VERSION 3.20)
project(th06_sdl3 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(USE_GLES "Use GLES2 renderer" OFF)

# =========================================================
# SDL3
# =========================================================

if(WIN32)

    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(SDL_ARCH "x64")
    else()
        set(SDL_ARCH "x86")
    endif()

    set(SDL3_DIR       "${CMAKE_SOURCE_DIR}/../3rdparty/SDL3")

    # SDL3
    add_library(SDL3::SDL3 SHARED IMPORTED)

    set_target_properties(SDL3::SDL3 PROPERTIES
        IMPORTED_LOCATION "${SDL3_DIR}/lib/${SDL_ARCH}/SDL3.dll"
        IMPORTED_IMPLIB   "${SDL3_DIR}/lib/${SDL_ARCH}/SDL3.lib"
        INTERFACE_INCLUDE_DIRECTORIES "${SDL3_DIR}/include;${SDL3_DIR}/include/SDL3"
    )

    message(STATUS "SDL3 ARCH: ${SDL_ARCH}")

else()

    find_package(PkgConfig REQUIRED)

    pkg_check_modules(SDL3 REQUIRED IMPORTED_TARGET sdl3)

    if(NOT TARGET SDL3::SDL3)
        add_library(SDL3::SDL3 ALIAS PkgConfig::SDL3)
    endif()

endif()

# =========================================================
# Sources
# =========================================================

set(TH06_GAME_SOURCES
    ../src/main.cpp
    ../src/AnmManager.cpp
    ../src/AsciiManager.cpp
    ../src/BombData.cpp
    ../src/BulletData.cpp
    ../src/BulletManager.cpp
    ../src/Chain.cpp
    ../src/Controller.cpp
    ../src/EclManager.cpp
    ../src/EffectManager.cpp
    ../src/Ending.cpp
    ../src/EnemyEclInstr.cpp
    ../src/EnemyManager.cpp
    ../src/FileSystem.cpp
    ../src/GameErrorContext.cpp
    ../src/GameManager.cpp
    ../src/GamePaths.cpp
    ../src/GameWindow.cpp
    ../src/Gui.cpp
    ../src/ItemManager.cpp
    ../src/MainMenu.cpp
    ../src/MidiOutput.cpp
    ../src/MusicRoom.cpp
    ../src/Player.cpp
    ../src/ReplayManager.cpp
    ../src/ResultScreen.cpp
    ../src/Rng.cpp
    ../src/ScreenEffect.cpp
    ../src/SoundPlayer.cpp
    ../src/Stage.cpp
    ../src/Supervisor.cpp
    ../src/TextHelper.cpp
    ../src/utils.cpp
    ../src/ZunMath.cpp
    ../src/ZunTimer.cpp
    ../src/thirdparty/sjis_converter.cpp
    ../src/midi/MidiDefault.cpp
    ../src/graphics/GLFunc.cpp
    ../src/graphics/FixedFunctionGL.cpp
    ../src/graphics/WebGL.cpp
    ../src/graphics/Software.cpp
    ../src/pbg3/FileAbstraction.cpp
    ../src/pbg3/IPbg3Parser.cpp
    ../src/pbg3/Pbg3Archive.cpp
    ../src/pbg3/Pbg3Parser.cpp
)

# =========================================================
# Executable
# =========================================================

add_executable(th06 ${TH06_GAME_SOURCES})

target_compile_definitions(th06 PRIVATE
    TH06_USE_GLES=1
)
target_compile_definitions(th06 PRIVATE SDL_ENABLE_OLD_NAMES)

# =========================================================
# Includes
# =========================================================

target_include_directories(th06 PRIVATE
    ${CMAKE_SOURCE_DIR}/../src
    ${CMAKE_SOURCE_DIR}/../build/autogenerated
)

# =========================================================
# Compiler flags
# =========================================================

if(MSVC)
    target_compile_options(th06 PRIVATE /utf-8)
    target_link_options(th06 PRIVATE /MAP)
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")

    target_compile_options(th06 PRIVATE
        -m32
        -fpermissive
        -Wno-changes-meaning
        -Wno-unknown-pragmas
    )

    target_link_options(th06 PRIVATE -m32)

endif()

# =========================================================
# i18n generation
# =========================================================

set(I18N_TPL "${CMAKE_SOURCE_DIR}/../src/i18n.tpl")
set(I18N_HPP "${CMAKE_SOURCE_DIR}/../build/autogenerated/i18n.hpp")

if(WIN32)
    set(TH06_PYTHON python)
else()
    find_program(TH06_PYTHON NAMES python3 python REQUIRED)
endif()

set(TH_TEXT_ENCODING "utf-8")

add_custom_command(
    OUTPUT "${I18N_HPP}"

    COMMAND ${CMAKE_COMMAND} -E make_directory
        "${CMAKE_SOURCE_DIR}/../build/autogenerated"

    COMMAND ${TH06_PYTHON}
        "${CMAKE_SOURCE_DIR}/../scripts/gen_i18n.py"
        "${I18N_TPL}"
        "${I18N_HPP}"
        "${TH_TEXT_ENCODING}"

    DEPENDS
        "${I18N_TPL}"
        "${CMAKE_SOURCE_DIR}/../scripts/gen_i18n.py"

    COMMENT "Generating i18n.hpp"
)

add_custom_target(generate_i18n DEPENDS "${I18N_HPP}")

add_dependencies(th06 generate_i18n)

# =========================================================
# OpenGL
# =========================================================

find_package(OpenGL REQUIRED)

if(OPENGL_gl_LIBRARY)
    target_link_libraries(th06 PRIVATE ${OPENGL_gl_LIBRARY})
else()
    target_link_libraries(th06 PRIVATE OpenGL::GL)
endif()

# =========================================================
# Link
# =========================================================

target_link_libraries(th06 PRIVATE
    SDL3::SDL3
)

if(WIN32)
    target_link_libraries(th06 PRIVATE winmm)
endif()

# =========================================================
# Copy DLLs
# =========================================================

if(WIN32)

    add_custom_command(TARGET th06 POST_BUILD

        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${SDL3_DIR}/lib/${SDL_ARCH}/SDL3.dll"
            "$<TARGET_FILE_DIR:th06>"

        COMMENT "Copying SDL3 DLLs"
    )

endif()

# =========================================================
# Copy font
# =========================================================

set(FONT_SRC "${CMAKE_SOURCE_DIR}/../th06.ttf")

if(EXISTS "${FONT_SRC}")

    add_custom_command(TARGET th06 POST_BUILD

        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${FONT_SRC}"
            "$<TARGET_FILE_DIR:th06>/th06.ttf"

        COMMENT "Copying font"
    )

endif()