###############################################################################
# th06 Android Build - CMakeLists.txt
#
# This file is used by the Android Gradle build (app/jni/CMakeLists.txt).
# It builds SDL2, SDL2_image, SDL2_mixer from source and links the game
# as a shared library named "main" (required by SDLActivity).
#
# This does NOT modify the top-level CMakeLists.txt used for Windows/Linux.
###############################################################################

cmake_minimum_required(VERSION 3.6)
project(th06_android LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Root of the th06 project (three levels up from android/app/jni/)
get_filename_component(TH06_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../.." ABSOLUTE)

# ============================================================================
# SDL2 libraries (build from source)
# ============================================================================
set(SDL2_SRC_DIR    "${TH06_ROOT}/android/SDL2_src")
set(SDL2_IMAGE_DIR  "${TH06_ROOT}/android/SDL2_image_src")
set(SDL2_MIXER_DIR  "${TH06_ROOT}/android/SDL2_mixer_src")
set(SDL2_TTF_DIR  "${TH06_ROOT}/android/SDL2_ttf_src")

# SDL2 core
add_subdirectory(${SDL2_SRC_DIR} SDL2)

# SDL2_image (needs SDL2 headers)
set(SDL2IMAGE_SAMPLES OFF CACHE BOOL "" FORCE)
set(SDL2IMAGE_INSTALL OFF CACHE BOOL "" FORCE)
set(SDL2IMAGE_VENDORED OFF CACHE BOOL "" FORCE)
set(SDL2IMAGE_AVIF OFF CACHE BOOL "" FORCE)
set(SDL2IMAGE_WEBP OFF CACHE BOOL "" FORCE)
add_subdirectory(${SDL2_IMAGE_DIR} SDL2_image)

# SDL2_mixer — disable all optional codec libraries for Android
set(SDL2MIXER_SAMPLES OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_INSTALL OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_VENDORED OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_FLAC OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_MOD OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_OPUS OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_MIDI OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_MIDI_FLUIDSYNTH OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_MP3 OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_WAVPACK OFF CACHE BOOL "" FORCE)
add_subdirectory(${SDL2_MIXER_DIR} SDL2_mixer)

# SDL2_ttf — disable all optional codec libraries for Android
set(SDL2TTF_SAMPLES OFF CACHE BOOL "" FORCE)
set(SDL2TTF_INSTALL OFF CACHE BOOL "" FORCE)
set(SDL2TTF_VENDORED ON CACHE BOOL "" FORCE)
add_subdirectory(${SDL2_TTF_DIR} SDL2_ttf)

# ============================================================================
# i18n.hpp generation (same as main build)
# ============================================================================
set(I18N_TPL "${TH06_ROOT}/src/i18n.tpl")
set(I18N_HPP "${TH06_ROOT}/build/autogenerated/i18n.hpp")

find_program(TH06_PYTHON NAMES python3 python)
if(TH06_PYTHON AND EXISTS "${I18N_TPL}")
    add_custom_command(
        OUTPUT "${I18N_HPP}"
        COMMAND ${CMAKE_COMMAND} -E make_directory "${TH06_ROOT}/build/autogenerated"
        COMMAND ${TH06_PYTHON} "${TH06_ROOT}/scripts/gen_i18n.py"
            "${I18N_TPL}" "${I18N_HPP}" "utf-8"
        DEPENDS "${I18N_TPL}" "${TH06_ROOT}/scripts/gen_i18n.py"
        COMMENT "Generating i18n.hpp (UTF-8)"
    )
    add_custom_target(generate_i18n DEPENDS "${I18N_HPP}")
endif()

# ============================================================================
# Game shared library (must be named "main" for SDLActivity)
# ============================================================================
set(TH06_GAME_SOURCES
    ${TH06_ROOT}/src/main.cpp
    ${TH06_ROOT}/src/GLFunc.cpp
    ${TH06_ROOT}/src/AnmManager.cpp
    ${TH06_ROOT}/src/AsciiManager.cpp
    ${TH06_ROOT}/src/BombData.cpp
    ${TH06_ROOT}/src/BulletData.cpp
    ${TH06_ROOT}/src/BulletManager.cpp
    ${TH06_ROOT}/src/Chain.cpp
    ${TH06_ROOT}/src/CMyFont.cpp
    ${TH06_ROOT}/src/Controller.cpp
    ${TH06_ROOT}/src/EclManager.cpp
    ${TH06_ROOT}/src/EffectManager.cpp
    ${TH06_ROOT}/src/Ending.cpp
    ${TH06_ROOT}/src/EnemyEclInstr.cpp
    ${TH06_ROOT}/src/EnemyManager.cpp
    ${TH06_ROOT}/src/FileSystem.cpp
    ${TH06_ROOT}/src/GameErrorContext.cpp
    ${TH06_ROOT}/src/GameManager.cpp
    ${TH06_ROOT}/src/GamePaths.cpp
    ${TH06_ROOT}/src/GameWindow.cpp
    ${TH06_ROOT}/src/Gui.cpp
    ${TH06_ROOT}/src/ItemManager.cpp
    ${TH06_ROOT}/src/MainMenu.cpp
    ${TH06_ROOT}/src/MidiOutput.cpp
    ${TH06_ROOT}/src/MusicRoom.cpp
    ${TH06_ROOT}/src/Player.cpp
    ${TH06_ROOT}/src/ReplayManager.cpp
    ${TH06_ROOT}/src/ResultScreen.cpp
    ${TH06_ROOT}/src/Rng.cpp
    ${TH06_ROOT}/src/ScreenEffect.cpp
    ${TH06_ROOT}/src/SoundPlayer.cpp
    ${TH06_ROOT}/src/Stage.cpp
    ${TH06_ROOT}/src/Supervisor.cpp
    ${TH06_ROOT}/src/TextHelper.cpp
    ${TH06_ROOT}/src/utils.cpp
    ${TH06_ROOT}/src/ZunTimer.cpp
    # ${TH06_ROOT}/src/zwave.cpp
    # GLES renderer only (no fixed-function RendererGL on Android)
    # ${TH06_ROOT}/src/RendererGLES.cpp
    # sdl2_renderer.cpp is EXCLUDED: uses GL 1.x fixed-function calls
    # pbg3 archive
    ${TH06_ROOT}/src/pbg3/FileAbstraction.cpp
    ${TH06_ROOT}/src/pbg3/IPbg3Parser.cpp
    ${TH06_ROOT}/src/pbg3/Pbg3Archive.cpp
    ${TH06_ROOT}/src/pbg3/Pbg3Parser.cpp
    # graphics
    ${TH06_ROOT}/src/midi/MidiDefault.cpp
    ${TH06_ROOT}/src/graphics/FixedFunctionGL.cpp
    ${TH06_ROOT}/src/graphics/WebGL.cpp
    # ImGui core
    ${TH06_ROOT}/3rdparty/imgui/imgui.cpp
    ${TH06_ROOT}/3rdparty/imgui/imgui_draw.cpp
    ${TH06_ROOT}/3rdparty/imgui/imgui_tables.cpp
    ${TH06_ROOT}/3rdparty/imgui/imgui_widgets.cpp
    # ImGui SDL2 + OpenGL3/ES backend (NOT opengl2 — it uses fixed-function)
    ${TH06_ROOT}/3rdparty/imgui/imgui_impl_sdl.cpp
    ${TH06_ROOT}/3rdparty/imgui/imgui_impl_opengl3.cpp
)

add_library(main SHARED ${TH06_GAME_SOURCES})

# Android define + GLES
target_compile_definitions(main PRIVATE
    TH06_USE_GLES=1
    TH06_ANDROID=1
)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(main PRIVATE TH06_ECL_TRACE=1)
endif()

# Clang flags matching the main CMakeLists.txt GCC/Clang section
target_compile_options(main PRIVATE
    -fpermissive             # Allow MSVC-compatible syntax (extra qualification, etc.)
    -Wno-extra-qualification
    -Wno-unknown-warning-option
    -Wno-unknown-pragmas
    -Wno-address-of-temporary  # MSVC allows taking address of temporaries
    -Wno-format-security       # NDK promotes this to error; project has safe patterns
)

target_include_directories(main PRIVATE
    ${TH06_ROOT}/src
    ${TH06_ROOT}/build/autogenerated
    ${TH06_ROOT}/3rdparty/rapidjson/include
    ${TH06_ROOT}/3rdparty/imgui
)

# i18n dependency
if(TARGET generate_i18n)
    add_dependencies(main generate_i18n)
endif()

# Find Android system libraries
find_library(log-lib log)
find_library(GLESv2-lib GLESv2)
find_library(android-lib android)

target_link_libraries(main PRIVATE
    SDL2::SDL2
    SDL2_image::SDL2_image
    SDL2_mixer::SDL2_mixer
    SDL2_ttf::SDL2_ttf
    ${log-lib}
    ${GLESv2-lib}
    ${android-lib}
)
